# musescore-mei

./: README.md  pyproject.toml
export_server/: LICENSE  server.py
plugin/export_mei/: LICENSE  export_mei.qml
